--- a/theme.css
+++ b/theme.css
@@ -9,9 +9,13 @@ body {
 
 /* Frontpage */
 
+#main {
+  text-align: center;
+}
+
 .post {
   width: 500px; 
-  margin: 0;
+  margin: 0 0 10px;
   padding: 0;
 }
 .post img {
@@ -26,6 +30,9 @@ body {
 
 /* Single */
 
+#main.single {
+  text-align: left;
+}
 .single .post {
   margin: 0 auto;
 }
